# GenomeVault

./: .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .tailchasing_history.db  .zk_transcript_key  AGENTS.md  ARCHITECTURE_DECISIONS.md  AUDIT_FIXES_README.md  AUDIT_FIX_SCRIPTS_GUIDE.md  AUDIT_IMPLEMENTATION_SUMMARY.md  AUDIT_REPORT.md  BLACK_FIX_INSTRUCTIONS.md  BREAKING_CHANGES.md  CLAUDE.md  CLAUDE_GIT_POSTMORTEM.md  CONTRIBUTING.md  DETAILED_ISSUES.csv  DEV_PIPELINE_AUDIT.md  DEV_PIPELINE_IMPLEMENTATION.md  DEV_PIPELINE_IMPLEMENTATION_COMPLETE.md  Dockerfile  EXPERIMENTAL_FEATURES.md  FINAL_FIX_SUMMARY.md  GITHUB_READY.md  HDC_IMPLEMENTATION_COMPLETE.md  HDC_INTEGRATION_SUMMARY.md  HDC_PIR_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  ISSUE_REPORT.md  KAN_HD_ENHANCEMENT_README.md  LICENSE  (+397 more)
.audit/: REPORT.md  git_branch.txt  git_status.txt  mypy.txt  ruff_before.txt
.cleanup_backups/: .ruff.toml_20250804_125105.bak  .ruff.toml_20250804_152557.bak  .ruff.toml_20250804_155356.bak  B_A_S_E_.py_20250804_131219.bak  BitmapGlyphMetrics.py_20250804_124749.bak  BitmapGlyphMetrics.py_20250804_131222.bak  Blocks.py_20250804_131213.bak  CFF2ToCFF.py_20250804_124751.bak  CFF2ToCFF.py_20250804_131224.bak  CFFToCFF2.py_20250804_124751.bak  CFFToCFF2.py_20250804_131224.bak  C_B_D_T_.py_20250804_124744.bak  C_B_D_T_.py_20250804_131217.bak  C_B_L_C_.py_20250804_131219.bak  C_F_F_.py_20250804_124749.bak  C_F_F_.py_20250804_131222.bak  C_F_F__2.py_20250804_124750.bak  C_F_F__2.py_20250804_131223.bak  C_O_L_R_.py_20250804_124745.bak  C_O_L_R_.py_20250804_131218.bak  C_P_A_L_.py_20250804_124744.bak  C_P_A_L_.py_20250804_131217.bak  D_S_I_G_.py_20250804_124745.bak  D_S_I_G_.py_20250804_131219.bak  D__e_b_g.py_20250804_124745.bak  D__e_b_g.py_20250804_131218.bak  DefaultTable.py_20250804_124742.bak  DefaultTable.py_20250804_131215.bak  E_B_D_T_.py_20250804_124745.bak  E_B_D_T_.py_20250804_131218.bak  E_B_L_C_.py_20250804_124747.bak  E_B_L_C_.py_20250804_131221.bak  ElementTree.py_20250804_124045.bak  ElementTree.py_20250804_130528.bak  F_F_T_M_.py_20250804_124742.bak  F_F_T_M_.py_20250804_131215.bak  F__e_a_t.py_20250804_124745.bak  F__e_a_t.py_20250804_131218.bak  G_D_E_F_.py_20250804_131216.bak  G_M_A_P_.py_20250804_124742.bak  (+12729 more)
.github/: pull_request_template.md
.quarantine/: .ruff.toml.backup  AUDIT_ANALYSIS_SUMMARY.md  AUDIT_CHECKLIST_GUIDE.md  AUDIT_FIX_COMPLETE_SUMMARY.md  GenomeVault_Safe_Fix_Implementation_Plan.md  PUSH_AUDIT_COMMANDS.md  PUSH_SUMMARY.md  audit_menu_final.sh  audit_validation_report.json  bypass_hooks_push.sh  dashboard_zero_red.py  fix_audit_issues.py  focused_audit_report.json  force_push_audit.sh  genomevault_cleanup.py  genomevault_safe_fix_implementation.py  implement_mvp_complete.py  manual_verification.py  one_line_push.sh  push_audit_checklist.sh  validate_audit_fixes.py
.tidy/: 00_git_files.txt  02_patterns.txt  05_dead_python_candidates.txt  SUMMARY.md  manual_cleanup_candidates.txt  old_scripts_report.tsv  scripts_to_quarantine.txt  top_root_report.tsv
advanced_analysis/: __init__.py
api/: __init__.py  app.py  main.py
attic/: add_utils_stubs.sh  check_commit_status.sh  cleanup_duplicates.sh  commit_all_tasks.sh  commit_constants.sh  commit_fixes.sh  commit_lint_clean.sh  commit_task3.sh  commit_task5.sh  final_push.sh  fix_original_format.sh  fix_ruff_comprehensive.sh  fix_zk_comprehensive_v2.sh  fix_zk_proofs_comprehensive.sh  git_diagnostic.sh  green_toolchain_commit.sh  health_dashboard_summary.sh  import_fixes_summary.sh  package_structure_summary.sh  prepare_for_github.sh  push_packed_hv.sh  pyproject_update_summary.sh  run_exception_checks.sh  setup_summary.sh  test_genomevault.sh  verify_metrics_setup.sh  verify_package_structure.sh  write_logging_metrics_stubs.sh  zk_fixes_complete_summary.sh  zk_fixes_summary.sh
backup_problematic/: analyze_and_fix_modules.py  comprehensive_fixes.py  comprehensive_fixes.py.backup  fix_duplicate_functions.py  fix_duplicate_functions.py.backup  fix_experimental_modules.py  generate_tailchasing_fixes.py  run_benchmark_fixed.py  run_benchmark_wrapper.py  run_tailchasing_fixes.py  safe_fixes.py  safe_fixes.py.backup  test_encoding.py  test_encoding.py.backup  test_hamming_lut.py  test_hamming_lut.py.backup  variant_search.py  variant_test_helper.py  variant_test_helper.py.backup
benchmarks/: README.md  benchmark_encoding.py  benchmark_packed_hypervector.py  benchmark_packed_hypervector.py.backup  harness.py  kan_hd_smoke.py
blockchain/: Dockerfile  README.md  __init__.py  governance.py  hardhat.config.ts  node.py  package.json
clinical_validation/: README.md  REFACTOR_README.md  __init__.py  circuits.py  clinical_circuits.py  core.py  run_validation.py  test_validation.py  zk_wrapper.py
config/: pot_config.yaml
configs/: mypy.ini
core/: __init__.py  config.py  constants.py  exceptions.py
data/: genome_A.fasta  genome_B.fasta
devops/: Dockerfile.test  docker-compose.test.yml  docker-compose.yml
devtools/: README.md  analyze_complexity.py  analyze_old_scripts.py  analyze_root_files.py  assert_no_stubs.py  bench.py  bench_hdc.py  bench_pir.py  cleanup_root_directory.py  clinical_eval_run.py  comprehensive_cleanup.py  comprehensive_status.py  convert_print_to_logging.py  debug_genomevault.py  debug_genomevault.py.backup  debug_summary.py  dependency_analysis.py  diagnose_failures.py  diagnose_imports.py  diagnostic.py  enhanced_cleanup.py  etl_run.py  final_validation.py  focused_cleanup.py  focused_green_impl.py  gen_projection.py  generate_comparison_report.py  generate_perf_report.py  genomevault_autofix.py  genomevault_cleanup.py  green_toolchain_impl.py  implement_checklist.py  pii_scan.py  pre_push_checklist.py  preflight_check.py  proper_ruff_upgrade.py  quick_fix_init_files.py  security_check.py  setup_dev.py  simple_autofix_demo.py  (+4 more)
docker/: Dockerfile.pir  docker-compose.yml
docs/: GITHUB_READY.md  HDC_PIR_INTEGRATION.md  ci.md  (+25 more)
(+873 files in other folders)
