[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomevault"
version = "0.1.0"
description = "GenomeVault — privacy-preserving genomic compute (ZK/PIR/HDC)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Rohan Vinaik" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest>=8.2",
  "pytest-asyncio>=1.1.0",
  "pytest-benchmark>=5.1.0",
  "pytest-cov",
  "pyupgrade",
  "radon"
]
ml = [
  "torch>=2.3",
  "scikit-learn>=1.6",
  "numpy>=1.21"
]
zk = [
  "pysnark>=0.6"
]
nanopore = [
  "ont-fast5-api>=4.0",
  "pyslow5>=0.7"
]
gpu = [
  "cupy-cuda12x>=12.0.0"
]
full = [
  "genomevault[ml,zk,nanopore,gpu]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["genomevault", "genomevault.*"]
exclude = ["scripts", "examples"]

[project.scripts]
genomevault = "genomevault.cli:main"
gv = "genomevault.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "^(.*/)?(migrations|build|dist|node_modules|.venv|venv|.mypy_cache|.ruff_cache|.pytest_cache)/"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = [
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplify
  "RET", # return
  "T20", # print statements
  "F",   # flakes
]
extend-ignore = [
  "D",    # docstring rules (defer)
  "ANN",  # type annotation rules (handled by mypy phase)
]
exclude = [
  "migrations",
  "build",
  "dist",
  "node_modules",
  ".venv",
  "venv",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
]

[tool.ruff.lint.isort]
known-first-party = ["genomevault"]
force-single-line = false
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["numpy.typing.mypy_plugin"]
ignore_missing_imports = false
follow_imports = "silent"
show_error_codes = true
mypy_path = "typings"

[[tool.mypy.overrides]]
module = [
  "genomevault.nanopore.*",
  "genomevault.pir.examples.*",
  "genomevault.api.*",
  "tests.*",
]
ignore_errors = true
